<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.walkthrough.topiclist.topiclistviewmodel.WalkthroughTopicSummaryViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/walkthrough_topic_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/walkthrough_topic_summary_container_margin"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:onClick="@{(v) -> viewModel.clickOnSummaryTile()}"
    app:roundedRectDrawableWithColor="@{viewModel.backgroundColor}">

    <org.oppia.android.app.customview.LessonThumbnailImageView
      android:id="@+id/walkthrough_topic_thumbnail_image_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:importantForAccessibility="no"
      app:entityId="@{viewModel.topicSummary.topicId}"
      app:entityType="@{viewModel.topicEntityType}"
      app:layout_constraintBottom_toTopOf="@+id/bottom_container"
      app:layout_constraintDimensionRatio="4:3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:lessonThumbnail="@{viewModel.topicSummary.topicThumbnail}" />

    <FrameLayout
      android:id="@+id/bottom_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent">

      <FrameLayout
        android:id="@+id/bottom_topic_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/component_color_shared_secondary_container_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
          android:id="@+id/walkthrough_topic_name_text_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="6dp"
          android:ellipsize="end"
          android:fontFamily="sans-serif-medium"
          android:gravity="top"
          android:maxLines="2"
          android:minLines="2"
          android:text="@{viewModel.name}"
          android:textColor="@color/component_color_shared_secondary_4_text_color"
          android:textSize="14sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/walkthrough_lesson_count_text_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ellipsize="end"
          android:fontFamily="sans-serif-light"
          android:lines="1"
          android:text="@{viewModel.computeWalkthroughLessonCountText()}"
          android:textColor="@color/component_color_shared_secondary_4_text_color"
          android:textSize="14sp"
          android:textStyle="italic"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/walkthrough_topic_name_text_view" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
