...
    <variable
      name="viewModel"
      type="org.oppia.android.app.walkthrough.topiclist.topiclistviewmodel.WalkthroughTopicHeaderViewModel" />
  </data>

  <TextView
    android:id="@+id/walkthrough_topic_header_text_view"
    style="@style/TextViewStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginEnd="28dp"
    android:layout_marginBottom="16dp"
...
